--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ android {
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.0.2"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -50,7 +50,7 @@ publish {
     userOrg = 'zxq'//bintray.com用户名
     groupId = 'com.zxq'//jcenter上的路径
     artifactId = 'myokhttp'//项目名称
-    publishVersion = '1.0.0'//版本号
-    desc = 'Oh hi, this is a nice description for a project, right?'//描述，不重要
+    publishVersion = '1.0.2'//版本号
+    desc = '增加是否缓存判断'//描述，不重要
     website = 'https://github.com/zxq/myokhttp'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
 }
