--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ android {
     defaultConfig {
         minSdkVersion 11
         targetSdkVersion 25
-        versionCode 3
-        versionName "1.0.3"
+        versionCode 4
+        versionName "1.0.4"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -50,7 +50,7 @@ publish {
     userOrg = 'zxq'//bintray.com用户名
     groupId = 'com.zxq'//jcenter上的路径
     artifactId = 'myokhttp'//项目名称
-    publishVersion = '1.0.3'//版本号
-    desc = '补充加载异常回调'//描述，不重要
+    publishVersion = '1.0.4'//版本号
+    desc = '解决缓存异常,Token保留问题'//描述，不重要
     website = 'https://github.com/zxq/myokhttp'//网站，不重要；尽量模拟github上的地址，例如我这样的；当然你有地址最好了
 }
